@@ -58,7 +58,7 @@ public class DatabaseAsyncUpdateRecord implements DatabaseAsyncTask {
         onOkCallback.call(record);
 
     } catch (final Exception e) {
-      LogManager.instance().log(this, Level.SEVERE, "Error on executing async update record operation (threadId=%d)", e, Thread.currentThread().threadId());
+      LogManager.instance().log(this, Level.SEVERE, "Error on executing async update record operation (threadId=%d)", e, Thread.currentThread().getId());
 
       async.onError(e);
 
