@@ -120,7 +120,7 @@ public class UpsertStep extends AbstractExecutionStep {
     if (flattened.size() > 1)
       throw new CommandExecutionException("Cannot UPSERT on OR conditions");
 
-    final AndBlock andCond = flattened.getFirst();
+    final AndBlock andCond = flattened.get(0);
     for (final BooleanExpression condition : andCond.getSubBlocks())
       condition.transformToUpdateItem().ifPresent(x -> x.applyUpdate(doc, context));
   }
