@@ -678,12 +678,12 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.getFirst().execute(currentRecord, context);
+      return childExpressions.get(0).execute(currentRecord, context);
 
     if (childExpressions.size() == 2) {
-      final Object leftValue = childExpressions.getFirst().execute(currentRecord, context);
+      final Object leftValue = childExpressions.get(0).execute(currentRecord, context);
       final Object rightValue = childExpressions.get(1).execute(currentRecord, context);
-      return operators.getFirst().apply(leftValue, rightValue);
+      return operators.get(0).apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(currentRecord, context);
@@ -694,12 +694,12 @@ public class MathExpression extends SimpleNode {
       return null;
 
     if (childExpressions.size() == 1)
-      return childExpressions.getFirst().execute(currentRecord, context);
+      return childExpressions.get(0).execute(currentRecord, context);
 
     if (childExpressions.size() == 2) {
-      final Object leftValue = childExpressions.getFirst().execute(currentRecord, context);
+      final Object leftValue = childExpressions.get(0).execute(currentRecord, context);
       final Object rightValue = childExpressions.get(1).execute(currentRecord, context);
-      return operators.getFirst().apply(leftValue, rightValue);
+      return operators.get(0).apply(leftValue, rightValue);
     }
 
     return calculateWithOpPriority(currentRecord, context);
@@ -709,7 +709,7 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.getFirst();
+    final MathExpression nextExpression = childExpressions.get(0);
     final Object val = nextExpression.execute(currentRecord, context);
     valuesStack.push(val == null ? NULL_VALUE : val);
 
@@ -737,7 +737,7 @@ public class MathExpression extends SimpleNode {
     final Deque valuesStack = new ArrayDeque<>();
     final Deque<Operator> operatorsStack = new ArrayDeque<Operator>();
 
-    final MathExpression nextExpression = childExpressions.getFirst();
+    final MathExpression nextExpression = childExpressions.get(0);
     final Object val = nextExpression.execute(currentRecord, context);
     valuesStack.push(val == null ? NULL_VALUE : val);
 
@@ -865,7 +865,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.getFirst().isIndexedFunctionCall(context);
+    return this.childExpressions.get(0).isIndexedFunctionCall(context);
   }
 
   public long estimateIndexedFunction(final FromClause target, final CommandContext context, final BinaryCompareOperator operator,
@@ -873,7 +873,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return -1;
     }
-    return this.childExpressions.getFirst().estimateIndexedFunction(target, context, operator, right);
+    return this.childExpressions.get(0).estimateIndexedFunction(target, context, operator, right);
   }
 
   public Iterable<Record> executeIndexedFunction(final FromClause target, final CommandContext context,
@@ -882,7 +882,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return null;
     }
-    return this.childExpressions.getFirst().executeIndexedFunction(target, context, operator, right);
+    return this.childExpressions.get(0).executeIndexedFunction(target, context, operator, right);
   }
 
   /**
@@ -900,7 +900,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1) {
       return false;
     }
-    return this.childExpressions.getFirst().canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
+    return this.childExpressions.get(0).canExecuteIndexedFunctionWithoutIndex(target, context, operator, right);
   }
 
   /**
@@ -917,7 +917,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.getFirst().allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
+    return this.childExpressions.get(0).allowsIndexedFunctionExecutionOnTarget(target, context, operator, right);
   }
 
   /**
@@ -936,12 +936,12 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.getFirst().executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
+    return this.childExpressions.get(0).executeIndexedFunctionAfterIndexSearch(target, context, operator, right);
   }
 
   public boolean isBaseIdentifier() {
     if (this.childExpressions != null && childExpressions.size() == 1)
-      return childExpressions.getFirst().isBaseIdentifier();
+      return childExpressions.get(0).isBaseIdentifier();
 
     return false;
   }
@@ -978,7 +978,7 @@ public class MathExpression extends SimpleNode {
     if (this.childExpressions.size() != 1)
       return false;
 
-    return this.childExpressions.getFirst().isCount();
+    return this.childExpressions.get(0).isCount();
   }
 
   public SimpleNode splitForAggregation(final AggregateProjectionSplit aggregateProj, final CommandContext context) {
@@ -1053,7 +1053,7 @@ public class MathExpression extends SimpleNode {
     if (childExpressions.size() != 1)
       throw new CommandExecutionException("cannot apply REMOVE " + this);
 
-    childExpressions.getFirst().applyRemove(result, context);
+    childExpressions.get(0).applyRemove(result, context);
   }
 }
 /* JavaCC - OriginalChecksum=c255bea24e12493e1005ba2a4d1dbb9d (do not edit this line) */
