@@ -131,12 +131,12 @@ public class DropIndexTest extends TestHelper {
     final DocumentType type2 = database.getSchema().buildDocumentType().withName(TYPE_NAME2).withTotalBuckets(3)
         .withSuperType(type.getName()).create();
 
-    assertThat(type2.getSuperTypes().getFirst().getName()).isEqualTo(type.getName());
+    assertThat(type2.getSuperTypes().get(0).getName()).isEqualTo(type.getName());
 
     final DocumentType type3 = database.getSchema().buildDocumentType().withName(TYPE_NAME3).withTotalBuckets(3)
         .withSuperType(type2.getName()).create();
 
-    assertThat(type2.getSuperTypes().getFirst().getName()).isEqualTo(type.getName());
+    assertThat(type2.getSuperTypes().get(0).getName()).isEqualTo(type.getName());
 
     type.createProperty("id", Integer.class);
     type.createProperty("name", String.class);
@@ -206,7 +206,7 @@ public class DropIndexTest extends TestHelper {
 
       // CHECK INHERITANCE CHAIN IS CONSISTENT
       for (final DocumentType parent : type2.getSuperTypes())
-        Assertions.assertThat(parent.getSubTypes().contains(type2.getSubTypes().getFirst())).isTrue();
+        Assertions.assertThat(parent.getSubTypes().contains(type2.getSubTypes().get(0))).isTrue();
 
       Assertions.assertThat(database.countType(TYPE_NAME, true)).isEqualTo(1);
 
