@@ -117,7 +117,7 @@ public class TextEmbeddingsImporter {
 
     if (settings.documentsSkipEntries != null) {
       for (int i = 0; i < settings.documentsSkipEntries; i++)
-        texts.removeFirst();
+        texts.remove(0);
     }
 
     if (!texts.isEmpty()) {
@@ -239,7 +239,7 @@ public class TextEmbeddingsImporter {
 
         final List<String> tokens = CodeUtils.split(line, ' ', -1, vectorSize.get());
 
-        String word = tokens.getFirst();
+        String word = tokens.get(0);
 
         float[] vector = new float[tokens.size() - 1];
         for (int i = 1; i < tokens.size() - 1; i++)
