@@ -281,14 +281,14 @@ public class ReplicationLogFile extends LockContext {
       if (message.messageNumber < lastMessageNumber) {
         LogManager.instance().log(this, Level.WARNING,
             "Wrong sequence in message numbers. Last was %d and now receiving %d. Skip saving this entry (threadId=%d)",
-            lastMessageNumber, message.messageNumber, Thread.currentThread().threadId());
+            lastMessageNumber, message.messageNumber, Thread.currentThread().getId());
         return false;
       }
 
       if (message.messageNumber != lastMessageNumber + 1) {
         LogManager.instance().log(this, Level.WARNING,
             "Found a jump (%d) in message numbers. Last was %d and now receiving %d. Skip saving this entry (threadId=%d)",
-            (message.messageNumber - lastMessageNumber), lastMessageNumber, message.messageNumber, Thread.currentThread().threadId());
+            (message.messageNumber - lastMessageNumber), lastMessageNumber, message.messageNumber, Thread.currentThread().getId());
 
         return false;
       }
@@ -421,7 +421,7 @@ public class ReplicationLogFile extends LockContext {
 
     totalArchivedChunks = fileChunks.isEmpty() ? 0 : fileChunks.size() - 1;
 
-    final File lastFile = fileChunks.isEmpty() ? new File(logFile.getAbsolutePath() + ".0") : fileChunks.getLast();
+    final File lastFile = fileChunks.isEmpty() ? new File(logFile.getAbsolutePath() + ".0") : fileChunks.get(fileChunks.size() - 1);
 
     this.lastChunkChannel = new RandomAccessFile(lastFile, "rw").getChannel();
 
